deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocsp-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ocsp-manager
  name: ocsp-manager
  namespace: ocsp-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ocsp-manager
  template: # Pod template
    metadata:
      labels:
        run: ocsp-manager
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: ocsp-response-updater-sa
      containers:
        - name: ocsp-manager
          image: reccaflames/ocsp-manager:0.1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
          #         Below part is new
          volumeMounts:
            - name: ocsp-manager-tls
              mountPath: /etc/ocsp-manager
              readOnly: true
          command:
            - "/app/ocsp-controller"
            - "--ca-file=/etc/ocsp-manager/ca.crt"
            - "--tls-cert-file=/etc/ocsp-manager/tls.crt"
            - "--tls-private-key-file=/etc/ocsp-manager/tls.key"
      volumes:
        - name: ocsp-manager-tls
          secret:
            secretName: ocsp-manager-certificate-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ocsp-manager
  namespace: ocsp-manager
spec:
  type: ClusterIP
  selector:
    run: ocsp-manager
  ports:
    - port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ocsp-webhook-config
  annotations:
    cert-manager.io/inject-ca-from: ocsp-manager/ocsp-manager-certificate-secret
webhooks:
  - name: ocsp-manager.ocsp-manager.svc.cluster.local
    clientConfig:
      service:
        name: ocsp-manager
        namespace: ocsp-manager
        path: "/mutate"
        port: 443
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - secrets
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
---
